k8s/forward-auth-service-example.yml
apiVersion: v1
kind: Namespace
metadata:
  name: forward-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-forward-auth
  namespace: forward-auth
  labels:
    app: jwt-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-forward-auth
  template:
    metadata:
      labels:
        app: jwt-forward-auth
    spec:
      containers:
        - name: web
          image: elssdu/jwt-forward-auth:0.1
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: jwt-forward-auth
  namespace: forward-auth
  labels:
    app: jwt-forward-auth
spec:
  type: ClusterIP
  selector:
    app: jwt-forward-auth
  ports:
    - port: 80
